# rs-natural

./: Cargo.toml
src/: classifier.rs  distance.rs  lib.rs  ngram.rs  phonetics.rs  stem.rs  tokenize.rs
tests/: classification_tests.rs  distance_tests.rs
tests/data/: output.txt  voc.txt
